# MS_SQL_MCP_Server

./: .env.example  .gitignore  LICENSE  README.md  claude_config.json.example  direct_server.py  install.bat  main.py  migrate.py  novice_tools_import_snippet.py  proxy_launcher.js  pyproject.toml  requirements.txt  run_sql_mcp.bat  setup.bat  sql_connection_help.md  sql_mcp_server.py
scripts/: check_dependencies.py  check_env_vars.py  check_version.py  create_test_db.sql  direct_test.py  generate_test_env.py  remove_env.py  run_with_env.cmd  sanitize_code.py  simple_test_server.py
src/: __init__.py
src/sqlmcp/: __init__.py  config.py  server.py  server_fixed.py  tools_loader.py
src/sqlmcp/db/: __init__.py  connection.py
src/sqlmcp/prompts/: __init__.py  sql_helper.py
src/sqlmcp/resources/: __init__.py
src/sqlmcp/resources/usage_digest/: usage_digest.json
src/sqlmcp/tools/: README_ADAPTER.md  __init__.py  __init__fixed.py  analyze.py  analyze_fixed.py  basic_advanced.py  digest.py  metadata.py  metadata_fixed.py  novice_enhanced.py  query.py  schema.py  schema_extended.py  schema_extended_adapter.py  schema_extended_adapter_new.py  schema_fixed.py  simplified_adapter.py  usage_digest.py
src/sqlmcp/tools/basic_advanced/: __init__.py  advanced_inspector.py  data_summary.py  enhanced_inspector.py  export_tools.py  query_builder.py
src/sqlmcp/tools/novice_enhanced/: __init__.py  data_summary.py  enhanced_inspector.py  export_tools.py  query_builder.py
src/sqlmcp/utils/: __init__.py  logging.py  mcp_patch.py  security.py
(+9 files in other folders)
